--- a/IrisForm/Tools/Helpers.csproj
+++ b/IrisForm/Tools/Helpers.csproj
@@ -72,6 +72,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EyeDetecter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeTester.cs" />
