--- a/IrisForm/Tools/Helpers.csproj
+++ b/IrisForm/Tools/Helpers.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeTester.cs" />
+    <Compile Include="Recolor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
