Best kanni for today

--- a/IrisForm/Tools/Helpers.csproj
+++ b/IrisForm/Tools/Helpers.csproj
@@ -84,8 +84,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\..\..\Downloads\IMG_5336.JPG">
-      <Link>IMG_5336.JPG</Link>
+    <Content Include="blurEye.jpeg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="eye.jpg">
@@ -95,6 +94,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="haarcascade_eye.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="IMG_5336.JPG">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="testingImage.jpg">
